--- a/src/components/category/category.css
+++ b/src/components/category/category.css
@@ -5,6 +5,7 @@
 
 .categoryContainer {
   background: var(--dark2);
+  position: relative;
 }
 
 .categoryNav {
@@ -12,8 +13,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-
-  border-bottom: 1px solid var(--dark3);
 }
 
 .categoryNav li a {
@@ -38,17 +37,13 @@
 }
 
 .cat {
-  /* display: flex;
-  align-items: flex-start; */
-  /* justify-content: center; */
 
   display: flex;
   padding: 50px 0px;
   align-items: flex-start;
   gap: 40px;
-  /* align-self: stretch; */
 
-  border-bottom: 1px solid var(--Dark-15, #262626);
+  /* border-bottom: 1px solid var(--dark3); */
 }
 
 .cat .left {
@@ -112,12 +107,51 @@
   letter-spacing: -0.66px;
 }
 
-.desc{
+.desc {
   color: var(--grey2);
-font-family: var(--fonti);
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 150%; /* 24px */
-letter-spacing: -0.48px;
+  font-family: var(--fonti);
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 24px */
+  letter-spacing: -0.48px;
+}
+
+.like {
+  display: flex;
+  padding: 5px 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+  cursor: pointer;
+  border-radius: 100px;
+  border: 1px solid var(--dark3);
+  background: var(--dark2);
+}
+
+.like img {
+  width: 13px;
+}
+
+.like small {
+  color: var(--grey2);
+  font-family: var(--fontk);
+  font-size: 11px;
+  letter-spacing: -0.42px;
+}
+
+.action {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+}
+
+.lineCat {
+  width: 100%;
+  background: var(--dark3);
+  height: 1px;
+  position: absolute;
+  top: 11%;
+  right: 0%;
 }
