--- a/src/components/props/prop1.css
+++ b/src/components/props/prop1.css
@@ -1,9 +1,9 @@
-.futureTech {
+.subTitle {
   width: 100%;
   max-height: 20vh;
 
   display: flex;
-  padding: 100px 50px;
+  padding: 90px 50px;
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
@@ -13,10 +13,10 @@
   background: var(--dark2);
 }
 
-.futureTech h4 {
+.subTitle h4 {
   font-weight: 400;
   width: fit-content;
-  color: white;
+  color: white; 
   font-family: var(--fonti);
   padding: 6px 10px;
 
@@ -24,10 +24,11 @@
   background: var(--dark4);
 }
 
-.futureTech h2 {
+.subTitle h2 {
   color: white;
   font-family: var(--fontk);
   font-size: 40px;
   font-weight: 400;
   letter-spacing: -1.74px;
+  max-width: 800px;
 }
