--- a/src/components/resourceContent/resourceContent.css
+++ b/src/components/resourceContent/resourceContent.css
@@ -1,15 +1,29 @@
+.resourceContContainer {
+  position: relative;
+}
+
+.lineRes {
+  width: 1px;
+  background: var(--dark3);
+  height: 100%;
+  position: absolute;
+  top: 0%;
+  left: 35.5%;
+}
+
 .resourceContContainer .top {
   padding: 30px 50px;
   display: flex;
   align-items: center;
   width: 100%;
-  /* gap: 50px; */
+  gap: 50px;
 }
 
 .topLeft {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding: 0px 30px 0px 0px;
   /* max-width: 40%; */
 
   img {
@@ -29,7 +43,6 @@
     color: var(--grey2);
     font-family: var(--fonti);
     font-size: 14px;
-    /* max-width: 300px; */
     font-weight: 400;
     line-height: 150%;
   }
@@ -68,7 +81,7 @@
 .topRight {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 5px;
   flex: 1;
   max-width: 60%;
 
@@ -76,6 +89,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
 
     h4,
     p {
@@ -88,8 +102,7 @@
       font-size: 17px;
       font-style: normal;
       font-weight: 600;
-      line-height: 150%; /* 30px */
-      /* letter-spacing: -0.6px; */
+      line-height: 150%;
     }
 
     p {
@@ -104,25 +117,46 @@
   img {
     /* width: 600px; */
   }
+  .total,
+  .format,
+  .insight {
+    border-radius: 8px;
+    border: 1px solid var(--Dark-15, #262626);
+    background: var(--Dark-10, #1a1a1a);
+    padding: 15px;
+
+    small {
+      color: var(--grey2);
+      font-family: var(--fonti);
+      font-size: 13px;
+      font-weight: 400;
+      line-height: 150%; /* 24px */
+      letter-spacing: -0.48px;
+    }
+
+    h4 {
+      color: white;
+      font-family: var(--fonti);
+      font-size: 15px;
+      font-weight: 600;
+      line-height: 150%; /* 27px */
+      letter-spacing: -0.54px;
+    }
+  }
 
   .tolFor {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 25px;
+    /* width: 100%; */
 
-    .total,
     .format {
-      border-radius: 8px;
-      border: 1px solid var(--Dark-15, #262626);
-      background: var(--Dark-10, #1a1a1a);
-      padding: 15px;
-    }
-
-    .format{
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 15px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex: 1;
+      /* gap: 15px; */
     }
   }
 }
