--- a/src/components/resourceContent/resourceContent.css
+++ b/src/components/resourceContent/resourceContent.css
@@ -11,12 +11,27 @@
   left: 35.5%;
 }
 
-.resourceContContainer .top {
+.lineRes2 {
+  width: 100%;
+  background: var(--dark3);
+  height: 1px;
+  position: absolute;
+  top: 50%;
+  left: 0%;
+}
+
+.resourceContContainer .top,
+.resourceContContainer .bottom {
   padding: 30px 50px;
   display: flex;
   align-items: center;
   width: 100%;
   gap: 50px;
+}
+.tt {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .topLeft {
@@ -45,36 +60,6 @@
     font-size: 14px;
     font-weight: 400;
     line-height: 150%;
-  }
-
-  .downL {
-    width: fit-content;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 15px;
-    gap: 20px;
-
-    border-radius: 8px;
-    border: 1px solid var(--dark3);
-    background: var(--dark2);
-
-    small {
-      color: var(--grey2);
-      font-family: var(--fonti);
-      font-size: 14px;
-      font-weight: 400;
-    }
-
-    h4 {
-      color: white;
-      font-family: var(--fonti);
-      font-size: 17px;
-      font-style: normal;
-      font-weight: 600;
-      line-height: 150%; /* 30px */
-      letter-spacing: -0.6px;
-    }
   }
 }
 
